--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "lemonjar/meilisearch",
     "description": "Module for speedy Search using Meilisearch",
     "type": "magento2-module",
+    "keywords": ["magento2","meilisearch","search"],
+    "license": "MIT",
     "require": {
         "php": "^7.3",
         "magento/framework": "101.0.*",
@@ -14,5 +16,6 @@
         "psr-4": {
             "LemonJar\\Meilisearch\\": ""
         }
+
     }
 }
