--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
-        "magento/framework": "103.0.*",
+        "magento/framework": "^102.0.*",
         "meilisearch/meilisearch-php": "0.26.*"
     },
     "minimum-stability": "stable",
